--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
+    "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
