--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.17",
     "i": "^0.3.7",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "socket.io": "^4.5.4",
     "ts-node": "^10.9.2",
