--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "socket.io": "^4.5.4",
+    "stripe": "^18.1.0",
     "ts-node": "^10.9.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
