--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc --project .",
     "start": "node ./dist/index.js"
   },
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^13.3.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3",
