--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,8 @@ NODE_ENV=development
 ORIGIN=*
 PORT=3000
 
+IP_ADDRESS=
+
 DATABASE_URL=mongodb://localhost:27017
 DB_NAME=boolbi
 
@@ -14,6 +16,7 @@ EMAIL_FROM=nnsnajmussakib@gmail.com
 EMAIL_USER=nnsnajmussakib@gmail.com
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
+#  EMAIL_PASS=zdcn xvxx hptc xbgc
 EMAIL_PASS=wgle inkd sbpo bofh
 
 SUPER_USER_EMAIL=super@gmail.com
