--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^5.4.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^13.3.0",
