--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "boolbi",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "server.js",
   "author": "",
+  "type": "module",
   "license": "ISC",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc --project .",
-    "start": "node ./dist/index.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.dev.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "description": "",
   "devDependencies": {
