--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "license": "ISC",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.dev.ts",
+    "dev": "nodemon --legacy-watch src/server.dev.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -41,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.5.4",
     "stripe": "^18.1.0",
     "ts-node": "^10.9.2",
