--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "chalk": "^5.6.2",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
