--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
     "colors": "^1.4.0",
