--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ NODE_ENV=development
 ORIGIN=*
 PORT=3000
 
-IP_ADDRESS=0.0.0.0
+IP_ADDRESS=10.10.7.28
 
 DATABASE_URL=mongodb://localhost:27017
 DB_NAME=boolbi
@@ -13,18 +13,18 @@ MONGODB_ADMINUSERNAME=boolbi
 MONGODB_ADMINPASSWORD=boolbi_pass
 
 JWT_SECRET=thisisThseJWTSecret
-JWT_EXPIRE_IN=7d
+JWT_EXPIRE_IN=50d
 
-BCRYPT_SALT_ROUNDS=5
+BCRYPT_SALT_ROUNDS=12
 
-EMAIL_FROM=nnsnajmussakib@gmail.com
-EMAIL_USER=nnsnajmussakib@gmail.com
+EMAIL_FROM=
+EMAIL_USER=
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PASS=wgle inkd sbpo bofh
 
-SUPER_USER_EMAIL=super@gmail.com
-SUPER_USER_PASSWORD=super123456
+SUPER_USER_EMAIL=admin@mail.com
+SUPER_USER_PASSWORD=admin_password
 
 STRIP_PUBLIC_KEY=
 STRIP_SECRET_KEY=
